<resources>
    <string name="app_name">House Builder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_picture">Add picture</string>
    <string name="change_picture">Change picture</string>
    <string name="input_password">Password</string>
    <string name="input_username">Username</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign up</string>
    <string name="input_first_name">First Name</string>
    <string name="input_last_name">Last Name</string>
    <string name="input_phone_number">Phone Number</string>
    <string name="profile_picture_description">profile picture</string>
    <string name="nav_map">Map</string>
    <string name="nav_edit_profile">Edit profile</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_text_house_builder">House Builder</string>
    <string name="nav_home">Home</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="button_post">Post</string>
    <string name="button_post_land">Post the item</string>
    <string name="dialog_name">Post item</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="spinner_hint">Item</string>
    <string name="spinner_hint_search">Type</string>
    <string name="button_get_received_items">See items</string>
    <string name="nav_add_item">Add item</string>
    <string name="fab_content_description">add item</string>
    <string name="button_collect">Collect</string>
    <string name="button_change_username">Change username</string>
    <string name="button_change_password">Change password</string>
    <string name="add_item">Add item</string>
    <string name="collected_items">Collected items</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="username_leaderboard">Username</string>
    <string name="house_number_leaderboard">Houses</string>
    <string name="points_leaderboard">Points</string>
    <string name="items_table">Items on map</string>
    <string name="author_rb">author</string>
    <string name="type_rb">type</string>
    <string name="radius_rb">radius</string>
    <string name="points_rb">points</string>
    <string name="date_rb">date</string>
    <string name="author_search">Author</string>
    <string name="radius_search">Radius</string>
    <string name="button_filter">Filter</string>
    <string name="button_from_date">from</string>
    <string name="button_to_date">to</string>
    <string name="date">date</string>
    <string name="_5">5</string>
    <string name="_10">10</string>
    <string name="_15">15</string>
    <string name="_20">20</string>
    <string name="_25">25</string>
    <string name="name_listItems">Name</string>
    <string name="author_listItems">Author</string>
    <string name="dateCreated_listItems">Date</string>
    <string name="username_homeFragment">Username</string>
    <string name="points_homeFragment">Points</string>
    <string name="built_houses_homeFragment">Built houses</string>
    <string name="items_for_posting_homeFragment">Items for posting</string>
    <string name="concrete_0_12_collectedItemsFragment"> Concrete: 0/12</string>
    <string name="brick_0_8_collectedItemsFragment"> Brick: 0/8</string>
    <string name="roof_0_4_collectedItemsFragment"> Roof: 0/4</string>
    <string name="door_0_1_collectedItemsFragment"> Door: 0/1</string>
    <string name="window_0_4_collectedItemsFragment"> Window: 0/4</string>
    <string name="chimney_0_1_collectedItemsFragment"> Chimney: 0/1</string>
</resources>