<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c1e8ff"
    tools:context=".screens.SignupFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp" />

    <Button
        android:id="@+id/button_addpicture"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="230dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/orange_button_color"
        android:text="@string/add_picture"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/input_phone" />

    <ImageView
        android:id="@+id/upload_image"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:layout_marginStart="230dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/profile_picture_description"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintBottom_toTopOf="@+id/button_addpicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <EditText
        android:id="@+id/input_firstname"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/custom_input"
        android:textColorHint="@color/black"
        android:ems="10"
        android:hint="@string/input_first_name"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/upload_image"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/input_first_name" />

    <EditText
        android:id="@+id/input_lastname"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="200dp"
        android:background="@drawable/custom_input"
        android:textColorHint="@color/black"
        android:ems="10"
        android:hint="@string/input_last_name"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/upload_image"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_firstname"
        android:autofillHints="@string/input_last_name" />

    <EditText
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="200dp"
        android:background="@drawable/custom_input"
        android:textColorHint="@color/black"
        android:ems="10"
        android:hint="@string/input_phone_number"
        android:inputType="phone"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_lastname"
        android:autofillHints="@string/input_phone_number" />

    <EditText
        android:id="@+id/input_username_signup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/custom_input"
        android:textColorHint="@color/black"
        android:ems="10"
        android:hint="@string/input_username"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:autofillHints="@string/input_username" />

    <EditText
        android:id="@+id/input_password_signup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_input"
        android:textColorHint="@color/black"
        android:ems="10"
        android:hint="@string/input_password"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username_signup"
        android:autofillHints="@string/input_password" />

    <Button
        android:id="@+id/button_login_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/orange_button_color"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password_signup" />

    <Button
        android:id="@+id/button_signup_signup"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/button_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_signup" />

</androidx.constraintlayout.widget.ConstraintLayout>